fix default arrow overlapping

--- a/components/dropdown/core/style/index.scss
+++ b/components/dropdown/core/style/index.scss
@@ -48,30 +48,22 @@
       @include dropdown-multiple-line-ellipsis($selected-line-count);
     }
 
-    .custom-arrow-container {
-      display:flex;
+    .arrow-container {
+      display: flex;
       justify-content: center;
       align-items: center;
-      min-width: 48px;
+      min-width: 49px;
       flex-shrink: 0;
 
-      // position: relative;
-      // @include dropdown-center(true, false);
-    //   @include dropdown-symbol($arrow-symbol, $arrow-symbol-size, $arrow-symbol-font-weight);
-    //   right: $arrow-offset;
-    }
-
-    .default-arrow-symbol {
-      position: absolute;
-      right: $arrow-offset;
-      &:after {
-        // @include dropdown-center(true, false);
-        @include dropdown-symbol($arrow-symbol, $arrow-symbol-size, $arrow-symbol-font-weight);
+      .default-arrow-symbol {
+        &:after {
+          @include dropdown-symbol($arrow-symbol, $arrow-symbol-size, $arrow-symbol-font-weight);
+        }
       }
-    }
 
-    .arrow-active {
-      color: $active-color;
+      .arrow-active {
+        color: $active-color;
+      }
     }
   }
 
